--- a/index.html
+++ b/index.html
@@ -201,15 +201,23 @@
 
   </main>
 
-  <script>
-  // Enforce a single-language view: show either Greek (-el) or English (-en) content only
+<script>
+  // Optional: keep an openTab(id) helper if you use it elsewhere
+  function openTab(targetId) {
+    document.querySelectorAll('[id$="-el"], [id$="-en"]').forEach(sec => {
+      sec.style.display = 'none';
+    });
+    const el = document.getElementById(targetId);
+    if (el) el.style.display = 'block';
+  }
+
+  // Enforce a single-language view: Greek (-el) or English (-en)
   function setLang(lang) {
-    // Persist choice
     localStorage.setItem('siteLang', lang);
 
-    // Show/hide language-specific navigation
     const greekNav = document.querySelectorAll('.Greek-menu');
     const englishNav = document.querySelectorAll('.English-menu');
+
     if (lang === 'el') {
       greekNav.forEach(n => n.style.display = 'inline-block');
       englishNav.forEach(n => n.style.display = 'none');
@@ -230,7 +238,7 @@
   document.addEventListener('DOMContentLoaded', () => {
     const saved = localStorage.getItem('siteLang') || 'el';
     setLang(saved);
-    // Open initial tab for the chosen language (optional)
+    // Optional: open the default tab for the chosen language
     const defaultId = saved === 'el' ? 'home-el' : 'home-en';
     const t = document.getElementById(defaultId);
     if (t) t.style.display = 'block';
