Increase image width in hero section

--- a/index.html
+++ b/index.html
@@ -101,13 +101,13 @@
   <main id="content" class="container">
     <!-- Home el (Default) -->
     <section id="home-el" class="tab active" aria-label="Αρχική Ελληνικά">
-      <div class="hero">
+      <div class="hero" style="display:flex; flex-direction:column; align-items:center; text-align:center;">
         <div>
           <h1>ΕΛΛΗΝΙΚΟ ΠΑΡΑΤΗΡΗΤΗΡΙΟ ΑΡΓΥΡΟΧΡΥΣΟΧΟΪΑΣ ΚΑΙ ΚΟΣΜΗΜΑΤΟΠΟΙΙΑΣ</h1>
           <p>Ένας χώρος έρευνας για το ελληνικό κόσμημα που χαρτογραφεί το σύστημα πολιτισμού, οικονομίας και τεχνικής εκπαίδευσης στην αργυροχρυσοχοΐα, σε διάλογο με τις διεθνείς και εγχώριες τάσεις.</p>
           <button class="cta" onclick="openTab('about-el')">Περισσοτερα</button>
         </div>
-        <img src="photo ergastirio 6.png" alt="Κοσμήματα σε εργαστήριο" style="max-width:300px; height:auto; display:block;"/>
+        <img src="photo ergastirio 6.png" alt="Κοσμήματα σε εργαστήριο" style="max-width:600px; height:auto; display:block;"/>
       </div>
     </section>
 
