--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     </section>
 
     <!-- About el -->
-    <section id="about-el" class="tab" aria-label="Σχετικά Ελληνικά" style="display:none;">
+    <section id="about-el" class="tab" aria-label="Σχετικά Ελληνικά" style="display:none; text-align:center;">
       <h2>Τι είναι το Παρατηρητήριο</h2>
       <p>Το Ελληνικό Παρατηρητήριο Αργυροχρυσοχοΐας και Κοσμηματοποιίας (ΕΛΠΑΚ) αποτελεί μια ανεξάρτητη πρωτοβουλία που χαρτογραφεί τον σύγχρονο κόσμο του ελληνικού κοσμήματος. Παρατηρούμε και καταγράφουμε τάσεις, δομές και προοπτικές της αργυροχρυσοχοΐας - κοσμηματοποιίας από την ιστορική της διαδρομή, το εξαγωγικό αποτύπωμα και τη σχέση της με τον τουρισμό, μέχρι τις αλλαγές στην εκπαίδευση, τις νέες τεχνολογίες και τους τρόπους με τους οποίους τα κοσμήματα σχεδιάζονται, παράγονται και προωθούνται σήμερα.</p>
 
