Add text alignment to sections in index.html

--- a/index.html
+++ b/index.html
@@ -146,19 +146,19 @@
      </div>
 
     <!-- Έρευνα -->
-      <section id="research-el" class="tab" aria-label="Έρευνα Ελληνικά" style="display:none;">
+      <section id="research-el" class="tab" aria-label="Έρευνα Ελληνικά" style="display:none; text-align:center;"">
          <h2>Μελέτη 2027</h2>
-         <p> Σύντομη Περιγραφή - link (αναμένεται ανακοίνωση)/p>     
+         <p> Σύντομη Περιγραφή - link (αναμένεται ανακοίνωση)</p>     
      </section> 
 
     <!-- Δράσεις -->
-      <section id="activities-el" class="tab" aria-label="Δράσεις Ελληνικά" style="display:none;">
+      <section id="activities-el" class="tab" aria-label="Δράσεις Ελληνικά" style="display:none; text-align:center;">
          <h2>Συνεντευξεις</h2>
-         <p> Σύντομη Περιγραφή - (αναμένεται ανακοίνωση)/p>     
+         <p> Σύντομη Περιγραφή - (αναμένεται ανακοίνωση)</p>     
       </section>
     
     <!-- Επικοινωνία -->
-      <section id="contact-el" class="tab" aria-label="Επικοινωνία Ελληνικά" style="display:none;">
+      <section id="contact-el" class="tab" aria-label="Επικοινωνία Ελληνικά" style="display:none; text-align:center;">
          <h2>Email</h2>
          <p> info@hellenic-goldsmithing-observatory.eu/p>
 
@@ -167,19 +167,19 @@
        </section>
 
     <!-- Home en -->
-    <section id="home-en" class="tab" aria-label="Home English" style="display:none;">
-      <div class="hero">
+    <section id="home-en" class="tab" aria-label="Home English" style="display:none; text-align:center;">
+      <div class="hero" style="display:flex; flex-direction:column; align-items:center; text-align:center;">
         <div>
           <h1>HELLENIC GOLDSMITHING OBSERVATORY</h1>
           <p>A research space dedicated to Greek jewelry that maps the interconnected system of culture, the economy, and technical education in silversmithing and goldsmithing, in dialogue with international and local trends.</p>
           <button class="cta" onclick="openTab('about-en')">More Info</button>
         </div>
-        <img src="photo ergastirio 6.png" alt="photo ergastirio" style="max-width:300px; height:auto; display:block;"/>
+        <img src="photo ergastirio 6.png" alt="photo ergastirio" style="max-width:600px; height:auto; display:block;"/>
       </div>
     </section>
 
     <!-- About en -->
-    <section id="about-en" class="tab" aria-label="About English" style="display:none;">
+    <section id="about-en" class="tab" aria-label="About English" style="display:none; text-align:center;">
       <h2>What is the Observatory</h2>
       <p>Hellenic Goldsmithing Observatory (HelGO) is an independent initiative that maps the contemporary landscape of Greek jewelry. We observe and document trends, structures, and long‑term dynamics in goldsmithing: from its historical trajectory, export footprint, and relationship with tourism, to shifts in education, the adoption of new technologies, and the evolving ways in which jewelry is designed, produced, and communicated today.</p>
 
@@ -215,19 +215,19 @@
     </section>
 
       <!-- Research / -->
-      <section id="research-en" class="tab" aria-label="Research English" style="display:none;">
+      <section id="research-en" class="tab" aria-label="Research English" style="display:none; text-align:center;">
          <h2>Study 2027</h2>
          <p> Short Description - link (to be announced)</p>     
     </section> 
 
     <!-- Activities -->
-      <section id="activities-en" class="tab" aria-label="Activities English" style="display:none;">
+      <section id="activities-en" class="tab" aria-label="Activities English" style="display:none; text-align:center;">
          <h2>Interviews</h2>
          <p> Short Description - (to be announced)</p>     
     </section>
 
     <!-- Contact -->
-      <section id="contact-en" class="tab" aria-label="Contact English" style="display:none;">
+      <section id="contact-en" class="tab" aria-label="Contact English" style="display:none; text-align:center;">
          <h2>Email</h2>
          <p> info@hellenic-goldsmithing-observatory.eu/p>
 
