--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <a href="#" data-lang="el" onclick="openTab('home-el')">Αρχική</a>
       <a href="#" data-lang="el" onclick="openTab('about-el')">Σχετικά</a>
       <a href="#" data-lang="el" onclick="openTab('research-el')">Έρευνα</a>
-      <a href="#" data-lang="el" onclick="openTab('actions-el')">Δράσεις</a>
+      <a href="#" data-lang="el" onclick="openTab('activities-el')">Δράσεις</a>
       <a href="#" data-lang="el" onclick="openTab('contact-el')">Επικοινωνία</a>
     </span>
 
@@ -94,7 +94,7 @@
       <a href="#" data-lang="en" onclick="openTab('home-en')">Home</a>
       <a href="#" data-lang="en" onclick="openTab('about-en')">About</a>
       <a href="#" data-lang="en" onclick="openTab('research-en')">Research</a>
-      <a href="#" data-lang="en" onclick="openTab('actions-en')">Activities</a>
+      <a href="#" data-lang="en" onclick="openTab('activities-en')">Activities</a>
       <a href="#" data-lang="en" onclick="openTab('contact-en')">Contact</a>
     </span>
   </nav>
@@ -148,7 +148,7 @@
     </section>
 
     <!-- Research el -->
-    <section id="research-el" class="tab" aria-label="Έρευνα Ελληνικά" style="display:none; text-align:center;"">
+    <section id="research-el" class="tab" aria-label="Έρευνα Ελληνικά" style="display:none; text-align:center;">
          <h2>Μελέτη 2027</h2>
          <p> Σύντομη Περιγραφή - link (αναμένεται ανακοίνωση)</p>     
     </section> 
@@ -162,7 +162,7 @@
     <!-- Επικοινωνία -->
     <section id="contact-el" class="tab" aria-label="Επικοινωνία Ελληνικά" style="display:none; text-align:center;">
          <h2>Email</h2>
-         <p> info@hellenic-goldsmithing-observatory.eu/<p>
+         <p> info@hellenic-goldsmithing-observatory.eu</p>
 
          <h2>Social Media</h2>
          <p> Linked In </p>                        
@@ -177,7 +177,7 @@
           <button class="cta" onclick="openTab('about-en')">More Info</button>
         </div>
         <img src="photo ergastirio 6.png" alt="photo ergastirio" style="max-width:600px; height:auto; display:block;"/>
-      </div>
+     </div>
     </section>
 
     <!-- About en -->
@@ -195,33 +195,33 @@
            <div>
                <h3>Irene Nomikou-Lazarou - Researcher and Research Coordinator</h3>
                <p>She holds a degree in Economic and Regional Development from Panteion University, as well as two Master’s degrees: in Economic Theory (Athens University of Economics and Business) and in Data Science (The American College of Greece). She is a Fulbright Research Scholar at Columbia University, USA (National Center for Disaster Preparedness – Climate School, 2024–2025). She is currently a PhD Candidate at the Department of Economics of the Athens University of Economics and Business, where her research focuses on climate risk and catastrophic natural events, with an emphasis on their impacts on the insurance and financial sectors. Since 2022, she has been working as a researcher at the Foundation for Economic and Industrial Research (IOBE) on sectoral studies related to the green transition and entrepreneurship, environmental sustainability, regional development, climate risk in the financial system, and housing policy. She holds a diploma in goldsmithing and jewelry making from the Public Vocational School of Goldsmithing in Athens (2012–2014), an institution with a long-standing tradition in the field. She has gained practical experience through collaborations with jewelry workshops, as well as participation in group and solo exhibitions.</p>
-           <div>
-      <div>
+           </div>
+      </div>
 
       <div class="member">
            <img src="depi.png" alt="Despina Vlastu">
            <div>  
               <h3>Despina Vlastu – Researcher, Art Direction & Graphic Design</h3>
               <p>She is an Interior Designer, a graduate of AKTO and Middlesex University of London, holding an MA in Design (2006) with a focus on experience and leisure spaces. With extensive professional experience in architectural studios, construction companies, as well as through her own architectural practice and business, which she continues to run today, she shifted her focus to the field of jewelry. She is a graduate with distinction of the Public Vocational School of Silversmithing and Goldsmithing in Athens (2012–2014) and has participated in both group and solo exhibitions. Today, as a 3D Jewelry Designer, she passionately focuses her freelance professional practice on digital model design, the production and fabrication of jewelry and fashion accessories, as well as on the study and application of contemporary digital design and manufacturing tools, with particular emphasis on 3D printing technologies. In parallel, she creates and curates educational content through her personal YouTube channel, focusing on the digital jewelry design process and the dissemination of practical, practice-based knowledge. Her work and research interests focus on the transformations of the contemporary jewelry landscape, emerging technologies, shifts in education, and how jewelry is being redefined in terms of design, production, and its integration into today’s cultural and economic environment.</p>
-           <div>
-      <div>
+           </div>
+      </div>
 
       <div class="member">
            <img src="gioka.png" alt="Maria Gioka">
            <div>
               <h3>Maria Gioka – Researcher, Jewelry Market </h3>
               <p>Maria Gioka holds a degree in Economics from Athens University of Economics and Business (AUEB) and two postgraduate qualifications in Applied Economics and Financial Economics, and in Economic Theory (AUEB). She is currently a PhD candidate in the Department of Economic Science at AUEB, where her research focuses on the long-run relationship between public debt in selected countries and macroeconomic variables that influence its dynamics. Her professional background includes roles as a junior researcher at Hellenic Foundation for European & Foreign Policy (ELIAMEP) (2014–2015), administrative staff at APOLLO (2015–2017) and as a researcher at the Bank of Greece (2019–2020). During her doctoral studies, her teaching portfolio includes undergraduate and graduate courses. This experience has been instrumental in her ability to structure and clearly present complex theoretical and technical issues, and to highlight their links with creative practices, markets, and the process of value creation. Alongside her academic path, she grew up in Nafplio, in an environment closely connected to jewelry. From a young age, she gained substantive experience through the family jewelry business, in one of Greece’s busiest tourist markets. Her daily engagement with selling, promoting, and engaging with a broad Greek and international audience has given her deep insight into jewelry trends and the commercial dynamics of the industry, as well as a holistic view of the bridge between craftsmanship and commerce — from design and production to presentation, storytelling, and the buyer’s final selection of the piece.</p>
-           <div>
-      <div>
+           </div>
+      </div>
     </section>
         
-    <!-- Research / -->
+    <!-- Research en -->
     <section id="research-en" class="tab" aria-label="Research English" style="display:none; text-align:center;">
          <h2>Study 2027</h2>
          <p> Short Description - link (to be announced)</p>     
     </section> 
 
-    <!-- Activities -->
+    <!-- Activities en-->
     <section id="activities-en" class="tab" aria-label="Activities English" style="display:none; text-align:center;">
          <h2>Interviews</h2>
          <p> Short Description - (to be announced)</p>     
