--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <!-- Header: logo left, language right -->
   <header class="site-header" aria-label="Site header">
     <div class="site-header__brand" aria-label="Branding">
-      <img class="site-header__logo" src="EPAK.png" alt="Brand logo">
+      <img class="site-header__logo" src="EPAK.png" alt="HelGO.png">
     </div>
 
     <div class="site-header__lang" aria-label="Language switch">
